# poe-campaign-copilot

./: .gitignore  CREDITS.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
content/layouts/: extraction-meta.json  mapping.json
content/layouts/act-1/: 1_1_11_1.json  1_1_11_2.json  (+11 more)
crates/composer/: Cargo.toml
crates/composer/src/: lib.rs  render.rs
crates/composer/tests/: pilot_act1.rs
crates/content/: Cargo.toml
crates/event_parser/: Cargo.toml
crates/input_log/: Cargo.toml
crates/pob_import/: Cargo.toml
crates/replay/: Cargo.toml
crates/route_engine/: Cargo.toml
crates/session/: Cargo.toml
crates/task_engine/: Cargo.toml
docs/: DEVELOPMENT.md  LAYOUTS.md
src/: App.tsx  FilmstripBar.css  FilmstripBar.test.tsx  FilmstripBar.tsx  SettingsContainer.tsx  SettingsPage.css  SettingsPage.test.tsx  SettingsPage.tsx  UpdateBanner.css  UpdateBanner.test.tsx  UpdateBanner.tsx  hotkeys.test.ts  hotkeys.ts  main.tsx  opacity.test.ts  opacity.ts  overlayHeight.test.ts  overlayHeight.ts  runTimer.test.ts  runTimer.ts  test-setup.ts  types.ts  useOverlay.ts  useOverlayHeight.test.tsx  useOverlayHeight.ts  useUpdater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bug_report.rs  config.rs  diagnostics.rs  hotkeys.rs  journal.rs  main.rs  pipeline.rs  run_timer.rs
tools/: extract_poelayouts.py  poelayouts-mapping-overrides.json  sync-exile-leveling.sh
(+159 files in other folders)
