[package]
name = "poe-copilot-app"
version = "0.1.0"
edition = "2024"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
content = { path = "../crates/content" }
